v3/crates/metadata-resolve/tests/failing/model_permissions/disallow_duplicate_argument_preset/resolve_error.snap
---
source: crates/metadata-resolve/tests/metadata_golden_tests.rs
expression: string
input_file: crates/metadata-resolve/tests/failing/model_permissions/disallow_duplicate_argument_preset/metadata.json
---
Error: Error in model permission for model 'Albums (in subgraph subgraphs)' for role 'user': preset argument 'include_rereleases' is defined more than once
    ╭─[ <unknown>:61:25 ]
    │
 61 │                 "role": "user",
    │                         ───┬──  
    │                            ╰──── The duplicate is defined in argument presets for this role
    │ 
 71 │                       "argument": "include_rereleases",
    │                                   ──────────┬─────────  
    │                                             ╰─────────── This argument preset is a duplicate
────╯
